# dse

./: .gitignore  .gitmodules  CMakeLists.txt
config/: dse_config.h.in
core/: BasicBitmapLoader.cpp  CMakeLists.txt  Camera.cpp  Cube.cpp  File.cpp  File_win32.cpp  File_win32.h  FrameBuffer.cpp  FrameBuffer_win32.cpp  FrameBuffer_win32.h  IOContext.cpp  IOContext_win32.cpp  IOContext_win32.h  Image.cpp  ImageManipulator.cpp  Material.cpp  Object.cpp  Scene.cpp  Sphere.cpp  SystemLoop.cpp  SystemLoop_win32.cpp  SystemLoop_win32.h  ThreadPool.cpp  ThreadPool_win32.cpp  ThreadPool_win32.h  UILoop.cpp  UILoop_win32.cpp  UILoop_win32.h  Window.cpp  Window_win32.cpp  Window_win32.h  errors.cpp  errors_win32.cpp  errors_win32.h  mcursor.cpp  modloader.cpp  status.cpp  status_win32.cpp  status_win32.h  win32_helpers.h
core/include/dse/core/: BasicBitmapLoader.h  CachedFile.h  Camera.h  Cube.h  File.h  FrameBuffer.h  IMesh.h  IOContext.h  ITextureDataProvider.h  Image.h  ImageManipulator.h  KeyboardKeyState.h  Material.h  Object.h  PaintEventData_win32.h  Scene.h  Sphere.h  SystemLoop.h  ThreadPool.h  UILoop.h  Window.h  WindowData_win32.h  WindowEventData_win32.h  WindowShowCommand.h  errors.h  mcursor.h  modloader.h  status.h  statusdef.h  win32.h
core/include/dse/core/detail/: CachedFile.h  RawFile.h  impexp.h  staticmod.h
core/include/dse/renders/: RenderOpenGL31.h
demo/: CMakeLists.txt  CustomPainter.cpp  dse.cpp
dsecore/dse/: CloseEvent.h  Event.h  KeyEvent.h  RedrawEvent.h  ResizeEvent.h  Terminal.h  core.h  obsbase.h  obscon.h  observer.h  obstore.h  utemplate.h  util.h
dsecore/src/: CloseEvent.cpp  KeyEvent.cpp  RedrawEvent.cpp  ResizeEvent.cpp  Terminal.cpp  Terminal_priv.h  empty.cpp  util.cpp
dsehello/src/: dsehello.cpp
headers/: CMakeLists.txt
headers/include/dse/math/: color.h  constants.h  mat.h  vmath.h
headers/include/dse/notifier/: notifier.h
headers/include/dse/util/: PoolAllocator.h  ProxyContainer.h  ProxyIterator.h  TagInvoke.h  access.h  coroutine.h  emptylock.h  enum_bitwise.h  execution.h  functional.h  pimpl.h  scope_exit.h  spinlock.h  unlock_guard.h
headers/include/dse/util/impl_coro/: auto_task.h  eager_task.h  generic.h  task.h
headers/include/dse/util/impl_exec/: base.h  ensure_started.h  then.h
ogl31rbe/: CMakeLists.txt  RenderOpenGL31_impl.cpp
ogl31rbe/gl31/: MaterialInstance.h  ObjectInstance.cpp  RefCounted.cpp  Scene.h  pack_shaders_to_cpp.cmake  post.vert
ogl31rbe/glwrp/: Context.cpp  FrameBuffer.h  ImportedFunction.h  Program.h  Sampler.h  Shader.h  TrvMvOnlyRes.h
ogl31video/: CMakeLists.txt  RenderOpenGL31.cpp  RenderOpenGL31_impl.cpp  RenderOpenGL31_impl.h
ogl31video/gl31/: MaterialInstance.cpp  MaterialInstance.h  MeshInstance.cpp  MeshInstance.h  ObjectInstance.h  RefCounted.h  Scene.cpp  TextureInstance.cpp  TextureInstance.h  binds.h  draw.frag  draw.vert  post.frag
ogl31video/glwrp/: Buffer.h  Context.cpp  Context.h  RenderBuffer.h  Texture.h  VAO.h  gl.h
rc_win32/: manifest.xml  res.rc
samples/: CMakeLists.txt
samples/arkanoid/: CMakeLists.txt  main.cpp
samples/demo/: CMakeLists.txt  CustomPainter.h  dse.cpp
samples/demo/rc_win32/: manifest.xml
samples/framebuffer/: CMakeLists.txt  main.cpp
samples/iotest/: CMakeLists.txt  main.cpp
src/: CustomPainter.cpp  CustomPainter.h  dse.cpp
src/core/: File.cpp  File.h  File_win32.cpp  File_win32.h  ThreadPool.cpp  ThreadPool.h  ThreadPool_win32.cpp  ThreadPool_win32.h  errors.cpp  errors.h  errors_win32.cpp  errors_win32.h
src/math/: constants.h  mat.h  qmath.h  vec.h  vmath.h
src/notifier/: make_handler.h  notifier.h
src/os/: KeyboardKeyState.h  PaintEventData_win32.h  Window.cpp  Window.h  WindowData_win32.h  WindowEventData_win32.h  WindowShowCommand.h  Window_win32.cpp  Window_win32.h  loop.cpp  loop.h  mcursor.cpp  mcursor.h  win32.h  win32_helpers.cpp
src/os/io/: File.cpp  File.h  File_win32.cpp  File_win32.h  IOCP_win32.cpp  IOCP_win32.h
src/renders/: RenderOpenGL31.cpp  RenderOpenGL31.h  RenderOpenGL31_impl.cpp  RenderOpenGL31_impl.h
src/renders/gl31/: MaterialInstance.cpp  MaterialInstance.h  MeshInstance.cpp  MeshInstance.h  ObjectInstance.cpp  ObjectInstance.h  RefCounted.cpp  RefCounted.h  Scene.cpp  Scene.h  TextureInstance.cpp  TextureInstance.h  binds.h  draw.frag  draw.vert  pack_shaders_to_cpp.cmake  post.frag  shaders.cpp  shaders.h
src/renders/glwrp/: Buffer.h  Context.cpp  Context.h  FrameBuffer.h  Program.h  RenderBuffer.h  Sampler.h  Shader.h  Texture.h  TrvMvOnlyRes.h  VAO.h  gl.cpp  gl.h
src/scn/: BasicBitmapLoader.cpp  BasicBitmapLoader.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  IMesh.h  IMeshStore.h  ITextureDataProvider.h  Material.cpp  Material.h  Object.cpp  Object.h  Scene.cpp  Scene.h
src/subsys/: RenderOpenGL31.cpp  RenderOpenGL31.h  RenderOpenGL31_impl.cpp  RenderOpenGL31_impl.h
src/subsys/gl/: Buffer.h  Context31.cpp  Context31.h  FragmentShader.h  FrameBuffer.h  ImportedFunction.h  Program.h  RenderBuffer.h  Shader.h  Texture.h  TrvMvOnlyRes.h  VAO.h  VertexShader.h  gl.cpp  gl.h
src/subsys/gl31_impl/: MeshInstance.cpp  MeshInstance.h  ObjectInstance.cpp  ObjectInstance.h  Scene.cpp  Scene.h  binds.h  shaders.cpp  shaders.h
src/threadutils/: ExecutionThread.cpp  ExecutionThread.h  TaskState.h  ThreadPool.cpp  ThreadPool.h  ThreadPool_win32.cpp  ThreadPool_win32.h  spinlock.h  unlock_guard.h
src/util/: Access.h  ExecutionThread.cpp  ExecutionThread.h  FinalStep.h  ProxyContainer.h  ProxyIterator.h  TagInvoke.h  TaskState.h  access.h  coroutine.h  emptylock.h  enum_bitwise.h  execution.h  functional.h  future.h  pimpl.h  scope_exit.h  spinlock.h  unlock_guard.h
src/util/impl_exec/: start_detached.h  wait.h
swal/: CMakeLists.txt
swal/include/swal/: com.h  enum_bitwise.h  error.h  gdi.h  handle.h  strconv.h  win_headers.h  window.h  zero_or_resource.h
